# eyelid-builder

./: .gitignore  .gitlab-ci.yml  README.md  README.rst  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/eyelid_builder/: __init__.py  common.py  core.py  ui.py
tests_eyelid_builder/: __init__.py  test_eyelid_builder.py
tests_eyelid_builder/fixtures/: common.py
